Refactors test data and introduced real ABN AMRO tab data.

--- a/Bookkeeper.Tests/Bookkeeper.Tests.csproj
+++ b/Bookkeeper.Tests/Bookkeeper.Tests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="TransactionParserTests.cs" />
     <Compile Include="TransactionReaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionTestData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
