--- a/Bookkeeper.Tests/Bookkeeper.Tests.csproj
+++ b/Bookkeeper.Tests/Bookkeeper.Tests.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TransactionCategorizerTests.cs" />
     <Compile Include="TransactionParserTests.cs" />
     <Compile Include="TransactionReaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
