--- a/Bookkeeper/Bookkeeper.csproj
+++ b/Bookkeeper/Bookkeeper.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CategorizedResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="TransactionCategorizer.cs" />
     <Compile Include="TransactionParser.cs" />
     <Compile Include="TransactionReader.cs" />
   </ItemGroup>
