--- a/Bookkeeper.Tests/Bookkeeper.Tests.csproj
+++ b/Bookkeeper.Tests/Bookkeeper.Tests.csproj
@@ -49,7 +49,7 @@
   <ItemGroup>
     <Compile Include="TransactionCategorizerTests.cs" />
     <Compile Include="TransactionParserTests.cs" />
-    <Compile Include="TransactionReaderTests.cs" />
+    <Compile Include="TransactionProcessorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransactionTestData.cs" />
   </ItemGroup>
