--- a/Bookkeeper/Bookkeeper.csproj
+++ b/Bookkeeper/Bookkeeper.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,12 +46,17 @@
   <ItemGroup>
     <Compile Include="CategorizedResult.cs" />
     <Compile Include="Category.cs" />
+    <Compile Include="CategoryEntries.cs" />
+    <Compile Include="CategoryEntry.cs" />
     <Compile Include="CategoryReporter.cs" />
     <Compile Include="ITransactionParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
     <Compile Include="TransactionParser.cs" />
     <Compile Include="TransactionProcessor.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
