--- a/Bookkeeper.Tests/Bookkeeper.Tests.csproj
+++ b/Bookkeeper.Tests/Bookkeeper.Tests.csproj
@@ -69,6 +69,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="TestFiles\TestCategories.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="TestFiles\THREE_MONTH_ABN_AMRO_EXPORT_FILE.TAB">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
