Implements total amount per category plus unknown category overview at end of report.

--- a/Bookkeeper/Bookkeeper.csproj
+++ b/Bookkeeper/Bookkeeper.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ITransactionParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Transaction.cs" />
+    <Compile Include="TransactionCategorizer.cs" />
     <Compile Include="TransactionParser.cs" />
     <Compile Include="TransactionProcessor.cs" />
   </ItemGroup>
